--- a/EScooter.Agent.Raspberry/EScooter.Agent.Raspberry.csproj
+++ b/EScooter.Agent.Raspberry/EScooter.Agent.Raspberry.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Iot.Device.Bindings" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.41.0" />
     <PackageReference Include="System.Device.Gpio" Version="2.1.0" />
   </ItemGroup>
 
