--- a/EScooter.Agent.Raspberry/EScooter.Agent.Raspberry.csproj
+++ b/EScooter.Agent.Raspberry/EScooter.Agent.Raspberry.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.41.0" />
     <PackageReference Include="System.Device.Gpio" Version="2.1.0" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <RootFolder>..</RootFolder>
+  </PropertyGroup>
 </Project>
