--- a/EScooter.Agent.Raspberry/Properties/launchSettings.json
+++ b/EScooter.Agent.Raspberry/Properties/launchSettings.json
@@ -1,10 +1,17 @@
 ﻿{
   "profiles": {
-    "EScooter.Agent.Raspberry": {
+    "Development": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
+      }
+    },
+    "Production": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Production"
       }
     }
   }
