Setup DI for GPIO hardware

--- a/EScooter.Agent.Raspberry/appsettings.json
+++ b/EScooter.Agent.Raspberry/appsettings.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Gps": {
+    "SerialPortName": ""
+  },
+  "Lcd": {
+    "RegisterSelectPin": 0,
+    "EnablePin": 0,
+    "DataPins": [ 0, 1, 2 ]
+  },
+  "Brakes": {
+    "Pin": 0
   }
 }
