Setup correct pins configuration

--- a/EScooter.Agent.Raspberry/appsettings.json
+++ b/EScooter.Agent.Raspberry/appsettings.json
@@ -9,11 +9,14 @@
     "SerialPortName": ""
   },
   "Lcd": {
-    "RegisterSelectPin": 0,
-    "EnablePin": 0,
-    "DataPins": [ 0, 1, 2 ]
+    "RegisterSelectPin": 26,
+    "EnablePin": 24,
+    "DataPins": [ 29, 31, 33, 35 ]
   },
   "Brakes": {
-    "Pin": 0
+    "Pin": 3
+  },
+  "StandbyIndicator": {
+    "Pin": 5
   }
 }
