Specify serial port name in appsettings

--- a/EScooter.Agent.Raspberry/appsettings.json
+++ b/EScooter.Agent.Raspberry/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Gps": {
-    "SerialPortName": ""
+    "SerialPortName": "/dev/ttyS0"
   },
   "Lcd": {
     "RegisterSelectPin": 26,
