Use the Neo-7m to also read speed values

--- a/EScooter.Agent.Raspberry/appsettings.json
+++ b/EScooter.Agent.Raspberry/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Gps": {
+  "Neo7m": {
     "SerialPortName": "/dev/ttyS0"
   },
   "Lcd": {
